# ownlisp

./: .gitignore  .gitmodules  Cargo.toml  README.md  stdlib.olp  temp
src/: ast.rs  env.rs  lists.rs  logic.rs  main.rs  math.rs  ownlisp.pest  parser.rs  strings.rs
vscodesupport/: .vsixmanifest  README.md  language-configuration.json  package.json  package.json.bak
vscodesupport/syntaxes/: ownlisp.tmLanguage.json
