[package]
name = "ownlisp"
version = "0.0.8"
edition = "2021"
authors = ["Michael Auracher <michael.auracher@gmail.com>"]

[profile.dev]
opt-level = 0
debug = true

[target.'cfg(unix)'.dependencies]
editline = { path = "editline" }

[dependencies]
itertools = "0.11"
lazy_static = "1.4"
pest = "2.7"
pest_derive = "2.7"
anyhow = "1.0"